[gd_scene load_steps=7 format=3 uid="uid://jxhx2nsd1txk"]

[ext_resource type="Script" path="res://actors/player/player_avatar.gd" id="1_6id4k"]
[ext_resource type="Script" path="res://actors/player/actor_input.gd" id="2_3pek4"]
[ext_resource type="Script" path="res://actors/player/player_attack.gd" id="2_flvnq"]
[ext_resource type="PackedScene" uid="uid://crwqrfv1anvfu" path="res://actors/player/weapons/revolver/revolver.tscn" id="3_b7idq"]
[ext_resource type="PackedScene" uid="uid://d0cf3w4to35r6" path="res://shared/primitives/card_mesh.tscn" id="4_r081x"]

[sub_resource type="CapsuleShape3D" id="CapsuleShape3D_3rhlu"]
height = 1.8

[node name="player_avatar" type="CharacterBody3D"]
floor_snap_length = 0.2
script = ExtResource("1_6id4k")

[node name="CollisionShape3D" type="CollisionShape3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.9, 0)
shape = SubResource("CapsuleShape3D_3rhlu")

[node name="display" type="Node3D" parent="."]

[node name="body" type="Node3D" parent="."]

[node name="head" type="Node3D" parent="body"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1.5, 0)
script = ExtResource("2_flvnq")

[node name="left_timer" type="Timer" parent="body/head"]
one_shot = true

[node name="right_timer" type="Timer" parent="body/head"]
one_shot = true

[node name="Camera3D" type="Camera3D" parent="body/head"]
fov = 90.0

[node name="aim_ray" type="RayCast3D" parent="body/head"]
target_position = Vector3(0, 0, -1000)
collision_mask = 5

[node name="hands" type="Node3D" parent="body/head"]

[node name="left" type="Node3D" parent="body/head/hands"]
transform = Transform3D(0.25, 0, 0, 0, 0.25, 0, 0, 0, 0.25, -0.169756, -0.124991, -0.142506)

[node name="revolver" parent="body/head/hands/left" instance=ExtResource("3_b7idq")]
metadata/_edit_lock_ = true

[node name="right" type="Node3D" parent="body/head/hands"]
transform = Transform3D(0.25, 0, 0, 0, 0.25, 0, 0, 0, 0.25, 0.128109, -0.0839303, -0.129188)

[node name="cards" type="Node3D" parent="body/head/hands/right"]
metadata/_edit_lock_ = true

[node name="MeshInstance3D" parent="body/head/hands/right/cards" instance=ExtResource("4_r081x")]

[node name="MeshInstance3D2" parent="body/head/hands/right/cards" instance=ExtResource("4_r081x")]
transform = Transform3D(0.976859, -0.213883, 0, 0.213883, 0.976859, 0, 0, 0, 1, -0.16226, -0.028589, -0.020388)

[node name="MeshInstance3D3" parent="body/head/hands/right/cards" instance=ExtResource("4_r081x")]
transform = Transform3D(0.933687, 0.358091, 0, -0.358091, 0.933687, 0, 0, 0, 1, 0.143897, -0.0213492, 0)

[node name="input" type="Node" parent="."]
script = ExtResource("2_3pek4")

[node name="hud" type="Control" parent="."]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="centre" type="Control" parent="hud"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -20.0
offset_top = -20.0
offset_right = 20.0
offset_bottom = 20.0
grow_horizontal = 2
grow_vertical = 2

[node name="ColorRect" type="ColorRect" parent="hud/centre"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -1.0
offset_top = -1.0
offset_right = 1.0
offset_bottom = 1.0
color = Color(1, 0, 0, 1)
